@@ -1,3 +1,11 @@
+2006-03-02  David Reveman  <davidr@novell.com>
+
+	* plugins/cube.c (cubePaintTransformedScreen): Reset color.
+
+	* plugins/switcher.c (switchPaintThumb): PAINT_WINDOW_TRANSLUCENT_MASK
+	if opacity isn't opaque.
+	(switchPaintWindow): Reset color.
+
 2006-03-01  David Reveman  <davidr@novell.com>
 
 	* configure.ac: Bump version to 0.0.5.
